 * User interface:
   * GUI1 comboboxes now use the thinner menu frame style.
 * Miscellaneous and bug fixes:
   * Revert all updates to hot-key handling which broke letter-based short-cuts
     on non-US keyboard layouts, where characters are in different key
     locations (bug #24186).
   * Fix the move-to-targets candidate action of the default AI ignoring tunnels
   * Fixed possible assertion failues in mp.
   * Fixed false positive OOS messages in replay when replaying games from an older
     wesnoth version..

Version 1.12.5:
 * Campaigns:
   * Eastern Invasion:
     * Fixed scenario events not working right on easy difficulty in 'Captured'.
   * Legend of Wesmere
     * Fixed carryover bugs in scenarios 5-12.
       (units missing from carryover, units appearing twice on map...)
 * Editor:
   * Add Recent Files menu with a list of recently saved or loaded maps or
     scenarios, up to a custom limit (by default 10) that can be set in
     Advanced Preferences.
   * Fixed Player Start labels not being updated with repeat map generations
     (bug #20036)
 * Language and i18n:
   * Updated translations: British English, French, Hungarian, Japanese,
     Latvian, Polish, Portuguese, Scottish Gaelic, Spanish
   * Fixed crashes during start-up on Windows resulting from add-ons containing
     erroneous textdomain declarations (bug #23839).
 * Multiplayer:
   * Era names no longer support formatting markup in the game setup screen.
   * Made MP lobby filter option filter on eras and mods too (bug #22987).
   * Fix scenario ending to early for players that are defeated if there are
     still players fighting and victory_when_enemies_defeated=no.
   * Fix 'enemies defeated' event causing OOS error in mp scenarios.
 * Terrains:
   * Removed unit elevation from N-S hanging bridges
   * Added unit elevation to NW-SE and SW-NE stone chasm bridges
   * Added unit elevation to NW-SE and SW-NE plank bridges